# todaytix_scraper

./: .env.example  .gitignore  api.py  deploy.sh  pyproject.toml
.github/workflows/: deploy.yml
src/: app.py  auth_utils.py  config.py  constants.py  db_utils.py
src/models/: database.py
src/routes/: auth.py  events.py  rules.py  scraper.py  ticketmaster_events.py  todaytix_events.py  upload.py  venue_mapping.py
src/scraper/: scheduler.py  scraper.py
src/services/: __init__.py  upload_service.py
src/templates/: base.html  event_rules.html  events.html  login.html  mapping_form.html  mappings.html  scrape.html  ticketmaster_events.html  todaytix_events.html  upload.html  venue_mapping.html
src/ticketmaster/: api.py
src/todaytix/: api.py  models.py  scraper.py  utils.py
